crates/lexeme/tests/ui/bad_item_attr.rs
use lexeme::Lexeme;

#[derive(Lexeme)]
#[lexeme(unknown)]
pub enum Token {}

fn main() {}
